--- a/ctown3.ipynb
+++ b/ctown3.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas.EL2C6PLE4ZYW3ECEVIV3OXXGRN2NRFM2.gfortran-win_amd64.dll\n",
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas.WCDJNK7YVMPZQ2ME2ZZHJJRJ3JIKNDB7.gfortran-win_amd64.dll\n",
+      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -15,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,19 +135,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1,\n",
-       "       1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,\n",
-       "       1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1,\n",
+       "       1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,17 +160,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.8\n",
-      "Precision  0.7959183673469388\n",
-      "Recall  0.8478260869565217\n",
-      "F1-score  0.8210526315789473\n"
+      "Accuracy  0.8117647058823529\n",
+      "Precision  0.8\n",
+      "Recall  0.8695652173913043\n",
+      "F1-score  0.8333333333333333\n"
      ]
     }
    ],
@@ -172,17 +183,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5036935704514365 Median : 0.5058823529411764 Min : 0.4470588235294118 Max : 0.6235294117647059\n",
-      "precision - Mean: 0.6824150978220745 Median : 1.0 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.08948432760364003 Median : 0.08695652173913043 Min : 0.0 Max : 0.32608695652173914\n",
-      "f1 -        Mean: 0.15378318554613699 Median : 0.16 Min : 0.0 Max : 0.48387096774193544\n"
+      "Accuracy -  Mean: 0.5031463748290015 Median : 0.5058823529411764 Min : 0.43529411764705883 Max : 0.611764705882353\n",
+      "precision - Mean: 0.6856589147286822 Median : 1.0 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.08998988877654197 Median : 0.08695652173913043 Min : 0.0 Max : 0.30434782608695654\n",
+      "f1 -        Mean: 0.15438785782240957 Median : 0.16 Min : 0.0 Max : 0.45901639344262296\n"
      ]
     }
    ],
@@ -203,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,19 +241,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -263,9 +274,9 @@
      "output_type": "stream",
      "text": [
       "Accuracy  0.5529411764705883\n",
-      "Precision  0.5476190476190477\n",
-      "Recall  1.0\n",
-      "F1-score  0.7076923076923077\n"
+      "Precision  0.5487804878048781\n",
+      "Recall  0.9782608695652174\n",
+      "F1-score  0.7031250000000001\n"
      ]
     }
    ],
@@ -278,17 +289,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5225718194254445 Median : 0.5176470588235295 Min : 0.4470588235294118 Max : 0.6823529411764706\n",
-      "precision - Mean: 0.5547224911910994 Median : 0.7083333333333334 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.18452982810920124 Median : 0.1956521739130435 Min : 0.0 Max : 0.43478260869565216\n",
-      "f1 -        Mean: 0.26524078207863655 Median : 0.3157894736842105 Min : 0.0 Max : 0.5846153846153846\n"
+      "Accuracy -  Mean: 0.5242134062927498 Median : 0.5058823529411764 Min : 0.43529411764705883 Max : 0.6235294117647059\n",
+      "precision - Mean: 0.5676326642420784 Median : 0.6923076923076923 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.18503538928210314 Median : 0.1956521739130435 Min : 0.0 Max : 0.43478260869565216\n",
+      "f1 -        Mean: 0.2681591665565531 Median : 0.3050847457627119 Min : 0.0 Max : 0.5555555555555555\n"
      ]
     }
    ],
@@ -309,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,19 +367,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1,\n",
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1])"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,17 +392,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.47058823529411764\n",
-      "Precision  0.4461538461538462\n",
+      "Accuracy  0.4264705882352941\n",
+      "Precision  0.4264705882352941\n",
       "Recall  1.0\n",
-      "F1-score  0.6170212765957447\n"
+      "F1-score  0.5979381443298969\n"
      ]
     }
    ],
@@ -404,17 +415,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5800273597811217 Median : 0.5735294117647058 Min : 0.4852941176470588 Max : 0.6617647058823529\n",
-      "precision - Mean: 0.3795197470588067 Median : 0.4166666666666667 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.13392141138732958 Median : 0.06896551724137931 Min : 0.0 Max : 0.4482758620689655\n",
-      "f1 -        Mean: 0.1860590233853703 Median : 0.125 Min : 0.0 Max : 0.5106382978723404\n"
+      "Accuracy -  Mean: 0.5807113543091655 Median : 0.5735294117647058 Min : 0.45588235294117646 Max : 0.7058823529411765\n",
+      "precision - Mean: 0.4184855154395093 Median : 0.5 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.1475541299117883 Median : 0.13793103448275862 Min : 0.0 Max : 0.41379310344827586\n",
+      "f1 -        Mean: 0.2045931321276584 Median : 0.21052631578947367 Min : 0.0 Max : 0.5238095238095238\n"
      ]
     }
    ],
@@ -435,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,19 +473,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "array([1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1])"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,17 +498,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.4264705882352941\n",
-      "Precision  0.4264705882352941\n",
-      "Recall  1.0\n",
-      "F1-score  0.5979381443298969\n"
+      "Accuracy  0.47058823529411764\n",
+      "Precision  0.4444444444444444\n",
+      "Recall  0.9655172413793104\n",
+      "F1-score  0.6086956521739131\n"
      ]
     }
    ],
@@ -510,17 +521,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5759233926128591 Median : 0.5735294117647058 Min : 0.4852941176470588 Max : 0.6617647058823529\n",
-      "precision - Mean: 0.38414435162041183 Median : 0.4 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.13311948676824378 Median : 0.13793103448275862 Min : 0.0 Max : 0.3793103448275862\n",
-      "f1 -        Mean: 0.19087515845994482 Median : 0.1904761904761905 Min : 0.0 Max : 0.4782608695652174\n"
+      "Accuracy -  Mean: 0.5790013679890561 Median : 0.5735294117647058 Min : 0.4852941176470588 Max : 0.6617647058823529\n",
+      "precision - Mean: 0.3919472909950986 Median : 0.42105263157894735 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.1315156375300722 Median : 0.13793103448275862 Min : 0.0 Max : 0.3448275862068966\n",
+      "f1 -        Mean: 0.18737239644695033 Median : 0.1875 Min : 0.0 Max : 0.46511627906976755\n"
      ]
     }
    ],
@@ -529,6 +540,27 @@
     "print(\"precision - Mean: {} Median : {} Min : {} Max : {}\".format(np.asarray(precision).mean(), np.median(np.asarray(precision)),np.asarray(precision).min(), np.asarray(precision).max()))\n",
     "print(\"recall -    Mean: {} Median : {} Min : {} Max : {}\".format(np.asarray(recall).mean(), np.median(np.asarray(recall)),np.asarray(recall).min(), np.asarray(recall).max()))\n",
     "print(\"f1 -        Mean: {} Median : {} Min : {} Max : {}\".format(np.asarray(fscore).mean(), np.median(np.asarray(fscore)),np.asarray(fscore).min(), np.asarray(fscore).max()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.00220809, 1.00265415, 1.00064584, 1.0034128 , 1.00119146,\n",
+       "       1.00000103, 1.00444349, 1.00542875])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sensor_models[0].threshold_clusters"
    ]
   },
   {
