--- a/ctown6.ipynb
+++ b/ctown6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,9 +131,9 @@
     "    train_normal = X_normal.loc[:,sens].values\n",
     "    train_attack = X_attack.loc[:,sens].values\n",
     "    model = Pipeline()\n",
-    "    model.fit(train_normal,train_attack,lag,stride,optimal_k=1,tune=False,corr_normal=corr_normal[:,i].reshape(len(X_normal.columns),nolag_normal))\n",
+    "    model.fit(train_normal,train_attack,lag,stride,optimal_k=1,tune=False,corr_normal=corr_normal[:,i].reshape(nolag_normal,len(X_normal.columns)).T)\n",
     "    test = X_test.loc[:,sens].values\n",
-    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(len(X_normal.columns),nolag_test))\n",
+    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(nolag_test,len(X_normal.columns)).T)\n",
     "    sensor_predicted.append(y_predicted)\n",
     "    accuracy.append(accuracy_score(y_actual,y_predicted))\n",
     "    precision.append(precision_score(y_actual,y_predicted))\n",
@@ -144,19 +144,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1,\n",
-       "       1, 0, 1, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0,\n",
-       "       1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1,\n",
-       "       1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+       "array([0, 0, 1, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1,\n",
+       "       1, 0, 1, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1,\n",
+       "       0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,17 +169,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.8\n",
-      "Precision  0.8222222222222222\n",
-      "Recall  0.8043478260869565\n",
-      "F1-score  0.8131868131868132\n"
+      "Accuracy  0.7764705882352941\n",
+      "Precision  0.7647058823529411\n",
+      "Recall  0.8478260869565217\n",
+      "F1-score  0.8041237113402062\n"
      ]
     }
    ],
@@ -192,17 +192,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.4963064295485637 Median : 0.49411764705882355 Min : 0.4470588235294118 Max : 0.5764705882352941\n",
-      "precision - Mean: 0.6722591362126246 Median : 1.0 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.07532861476238624 Median : 0.06521739130434782 Min : 0.0 Max : 0.2608695652173913\n",
-      "f1 -        Mean: 0.1307761450686093 Median : 0.12244897959183672 Min : 0.0 Max : 0.39344262295081966\n"
+      "Accuracy -  Mean: 0.4976744186046513 Median : 0.5058823529411764 Min : 0.4588235294117647 Max : 0.6\n",
+      "precision - Mean: 0.6209625322997416 Median : 0.8333333333333334 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.0813953488372093 Median : 0.08695652173913043 Min : 0.0 Max : 0.32608695652173914\n",
+      "f1 -        Mean: 0.1382953420231887 Median : 0.16 Min : 0.0 Max : 0.46875000000000006\n"
      ]
     }
    ],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,9 +237,9 @@
     "    train_normal = X_normal.loc[:,sens].values\n",
     "    train_attack = X_attack.loc[:,sens].values\n",
     "    model = Pipeline()\n",
-    "    model.fit(train_normal,train_attack,lag,stride,tune=False,kscore_init='inertia',corr_normal=corr_normal[:,i].reshape(len(X_normal.columns),nolag_normal))\n",
+    "    model.fit(train_normal,train_attack,lag,stride,tune=False,kscore_init='inertia',corr_normal=corr_normal[:,i].reshape(nolag_normal,len(X_normal.columns)).T)\n",
     "    test = X_test.loc[:,sens].values\n",
-    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(len(X_normal.columns),nolag_test))\n",
+    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(nolag_test,len(X_normal.columns)).T)\n",
     "    sensor_predicted.append(y_predicted)\n",
     "    accuracy.append(accuracy_score(y_actual,y_predicted))\n",
     "    precision.append(precision_score(y_actual,y_predicted))\n",
@@ -250,19 +250,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 0, 1, 0, 1, 1, 0, 1, 0, 1, 1, 1,\n",
-       "       1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1,\n",
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,17 +275,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.6352941176470588\n",
-      "Precision  0.6190476190476191\n",
-      "Recall  0.8478260869565217\n",
-      "F1-score  0.7155963302752294\n"
+      "Accuracy  0.611764705882353\n",
+      "Precision  0.5822784810126582\n",
+      "Recall  1.0\n",
+      "F1-score  0.736\n"
      ]
     }
    ],
@@ -298,17 +298,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.4993160054719562 Median : 0.49411764705882355 Min : 0.4588235294117647 Max : 0.611764705882353\n",
-      "precision - Mean: 0.6121079566428403 Median : 0.75 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.09605662285136501 Median : 0.08695652173913043 Min : 0.0 Max : 0.41304347826086957\n",
-      "f1 -        Mean: 0.15842811889055586 Median : 0.15384615384615383 Min : 0.0 Max : 0.5352112676056338\n"
+      "Accuracy -  Mean: 0.516279069767442 Median : 0.5176470588235295 Min : 0.4588235294117647 Max : 0.6235294117647059\n",
+      "precision - Mean: 0.5670844705500533 Median : 0.7272727272727273 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.16177957532861476 Median : 0.15217391304347827 Min : 0.0 Max : 0.4782608695652174\n",
+      "f1 -        Mean: 0.23990380915092968 Median : 0.2592592592592593 Min : 0.0 Max : 0.5789473684210527\n"
      ]
     }
    ],
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,10 +363,10 @@
     "    train_normal = X_normal.loc[:,sens].values\n",
     "    train_attack = X_attack.loc[:,sens].values\n",
     "    model = Pipeline()\n",
-    "    model.fit(train_normal,train_attack,lag,stride,tune=False,kscore_init='inertia',corr_normal=corr_normal[:,i].reshape(len(X_normal.columns),nolag_normal),\n",
-    "              corr_attack=corr_attack[:,i].reshape(len(X_attack.columns),nolag_attack))\n",
+    "    model.fit(train_normal,train_attack,lag,stride,tune=False,kscore_init='inertia',corr_normal=corr_normal[:,i].reshape(nolag_normal,len(X_normal.columns)).T,\n",
+    "              corr_attack=corr_attack[:,i].reshape(nolag_attack,len(X_attack.columns)).T)\n",
     "    test = X_test.loc[:,sens].values\n",
-    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(len(X_normal.columns),nolag_test))\n",
+    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(nolag_test,len(X_normal.columns)).T)\n",
     "    sensor_predicted.append(y_predicted)\n",
     "    accuracy.append(accuracy_score(y_actual,y_predicted))\n",
     "    precision.append(precision_score(y_actual,y_predicted))\n",
@@ -377,19 +377,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1,\n",
-       "       1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 0, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0,\n",
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,17 +402,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.6176470588235294\n",
-      "Precision  0.5319148936170213\n",
-      "Recall  0.8620689655172413\n",
-      "F1-score  0.6578947368421053\n"
+      "Accuracy  0.45588235294117646\n",
+      "Precision  0.4393939393939394\n",
+      "Recall  1.0\n",
+      "F1-score  0.6105263157894737\n"
      ]
     }
    ],
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,8 +447,8 @@
     "    train_normal = X_normal.loc[:,sens].values\n",
     "    train_attack = X_attack.loc[:,sens].values\n",
     "    model = Pipeline()\n",
-    "    model.fit(train_normal,train_attack,lag,stride,kscore_init='inertia',corr_normal=corr_normal[:,i].reshape(len(X_normal.columns),nolag_normal),\n",
-    "              corr_attack=corr_attack[:,i].reshape(len(X_attack.columns),nolag_attack))\n",
+    "    model.fit(train_normal,train_attack,lag,stride,kscore_init='inertia',corr_normal=corr_normal[:,i].reshape(nolag_normal,len(X_normal.columns)).T,\n",
+    "              corr_attack=corr_attack[:,i].reshape(nolag_attack,len(X_attack.columns)).T)\n",
     "    test = X_test.loc[:,sens].values\n",
     "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(len(X_normal.columns),nolag_test))\n",
     "    sensor_predicted.append(y_predicted)\n",
@@ -461,19 +461,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1,\n",
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,17 +486,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.5441176470588235\n",
-      "Precision  0.48214285714285715\n",
-      "Recall  0.9310344827586207\n",
-      "F1-score  0.6352941176470589\n"
+      "Accuracy  0.4264705882352941\n",
+      "Precision  0.4264705882352941\n",
+      "Recall  1.0\n",
+      "F1-score  0.5979381443298969\n"
      ]
     }
    ],
@@ -509,17 +509,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.582079343365253 Median : 0.5735294117647058 Min : 0.5147058823529411 Max : 0.6470588235294118\n",
-      "precision - Mean: 0.36455121106283894 Median : 0.3333333333333333 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.06655974338412189 Median : 0.034482758620689655 Min : 0.0 Max : 0.27586206896551724\n",
-      "f1 -        Mean: 0.10803532882486205 Median : 0.0625 Min : 0.0 Max : 0.380952380952381\n"
+      "Accuracy -  Mean: 0.5714774281805746 Median : 0.5735294117647058 Min : 0.4264705882352941 Max : 0.6911764705882353\n",
+      "precision - Mean: 0.36264830827146716 Median : 0.42857142857142855 Min : 0.0 Max : 0.875\n",
+      "recall -    Mean: 0.1932638331996792 Median : 0.1724137931034483 Min : 0.0 Max : 0.5862068965517241\n",
+      "f1 -        Mean: 0.240144969793951 Median : 0.26415094339622647 Min : 0.0 Max : 0.5573770491803278\n"
      ]
     }
    ],
