--- a/ctown7.ipynb
+++ b/ctown7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,10 +130,10 @@
     "    train_normal = X_normal.loc[:,sens].values\n",
     "    train_attack = X_attack.loc[:,sens].values\n",
     "    model = Pipeline()\n",
-    "    model.fit(train_normal,train_attack,lag,stride,optimal_k=1,tune=False,corr_normal=corr_normal[:,i].reshape(len(X_normal.columns),nolag_normal),\n",
+    "    model.fit(train_normal,train_attack,lag,stride,optimal_k=1,tune=False,corr_normal=corr_normal[:,i].reshape(nolag_normal,len(X_normal.columns)).T,\n",
     "              only_corr=True)\n",
     "    test = X_test.loc[:,sens].values\n",
-    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(len(X_normal.columns),nolag_test),only_corr=True)\n",
+    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(nolag_test,len(X_normal.columns)).T,only_corr=True)\n",
     "    sensor_predicted.append(y_predicted)\n",
     "    accuracy.append(accuracy_score(y_actual,y_predicted))\n",
     "    precision.append(precision_score(y_actual,y_predicted))\n",
@@ -144,19 +144,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+       "array([0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1,\n",
+       "       1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,\n",
+       "       0, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1,\n",
+       "       0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,17 +169,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.5411764705882353\n",
-      "Precision  0.5411764705882353\n",
-      "Recall  1.0\n",
-      "F1-score  0.7022900763358779\n"
+      "Accuracy  0.8235294117647058\n",
+      "Precision  0.803921568627451\n",
+      "Recall  0.8913043478260869\n",
+      "F1-score  0.845360824742268\n"
      ]
     }
    ],
@@ -192,17 +192,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.48700410396716837 Median : 0.47058823529411764 Min : 0.35294117647058826 Max : 0.6235294117647059\n",
-      "precision - Mean: 0.3977544732964917 Median : 0.5079365079365079 Min : 0.0 Max : 0.6666666666666666\n",
-      "recall -    Mean: 0.47320525783619816 Median : 0.5652173913043478 Min : 0.0 Max : 1.0\n",
-      "f1 -        Mean: 0.42191035371409225 Median : 0.5365853658536586 Min : 0.0 Max : 0.7419354838709677\n"
+      "Accuracy -  Mean: 0.5305061559507525 Median : 0.5176470588235295 Min : 0.4117647058823529 Max : 0.6705882352941176\n",
+      "precision - Mean: 0.7486039799993287 Median : 0.9 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.14711830131445908 Median : 0.15217391304347827 Min : 0.0 Max : 0.391304347826087\n",
+      "f1 -        Mean: 0.23766807076325533 Median : 0.2545454545454546 Min : 0.0 Max : 0.5625\n"
      ]
     }
    ],
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,10 +236,10 @@
     "    train_normal = X_normal.loc[:,sens].values\n",
     "    train_attack = X_attack.loc[:,sens].values\n",
     "    model = Pipeline()\n",
-    "    model.fit(train_normal,train_attack,lag,stride,tune=False,kscore_init='inertia',corr_normal=corr_normal[:,i].reshape(len(X_normal.columns),nolag_normal),\n",
+    "    model.fit(train_normal,train_attack,lag,stride,tune=False,kscore_init='inertia',corr_normal=corr_normal[:,i].reshape(nolag_normal,len(X_normal.columns)).T,\n",
     "              only_corr=True)\n",
     "    test = X_test.loc[:,sens].values\n",
-    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(len(X_normal.columns),nolag_test),only_corr=True)\n",
+    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(nolag_test,len(X_normal.columns)).T,only_corr=True)\n",
     "    sensor_predicted.append(y_predicted)\n",
     "    accuracy.append(accuracy_score(y_actual,y_predicted))\n",
     "    precision.append(precision_score(y_actual,y_predicted))\n",
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -298,17 +298,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.46320109439124474 Median : 0.4588235294117647 Min : 0.35294117647058826 Max : 0.6\n",
-      "precision - Mean: 0.2447984984619896 Median : 0.0 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.10111223458038424 Median : 0.0 Min : 0.0 Max : 0.9782608695652174\n",
-      "f1 -        Mean: 0.11302658769742344 Median : 0.0 Min : 0.0 Max : 0.6976744186046511\n"
+      "Accuracy -  Mean: 0.5811217510259918 Median : 0.611764705882353 Min : 0.4117647058823529 Max : 0.7411764705882353\n",
+      "precision - Mean: 0.5211117493181118 Median : 0.6818181818181818 Min : 0.0 Max : 0.8709677419354839\n",
+      "recall -    Mean: 0.4115267947421638 Median : 0.4782608695652174 Min : 0.0 Max : 0.9565217391304348\n",
+      "f1 -        Mean: 0.4486884274883631 Median : 0.5753424657534246 Min : 0.0 Max : 0.7555555555555555\n"
      ]
     }
    ],
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,10 +363,10 @@
     "    train_normal = X_normal.loc[:,sens].values\n",
     "    train_attack = X_attack.loc[:,sens].values\n",
     "    model = Pipeline()\n",
-    "    model.fit(train_normal,train_attack,lag,stride,tune=False,kscore_init='inertia',corr_normal=corr_normal[:,i].reshape(len(X_normal.columns),nolag_normal),\n",
-    "              corr_attack=corr_attack[:,i].reshape(len(X_attack.columns),nolag_attack),only_corr=True)\n",
+    "    model.fit(train_normal,train_attack,lag,stride,tune=False,kscore_init='inertia',corr_normal=corr_normal[:,i].reshape(nolag_normal,len(X_normal.columns)).T,\n",
+    "              corr_attack=corr_attack[:,i].reshape(nolag_attack,len(X_attack.columns)).T,only_corr=True)\n",
     "    test = X_test.loc[:,sens].values\n",
-    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(len(X_normal.columns),nolag_test),only_corr=True)\n",
+    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(nolag_test,len(X_normal.columns)).T,only_corr=True)\n",
     "    sensor_predicted.append(y_predicted)\n",
     "    accuracy.append(accuracy_score(y_actual,y_predicted))\n",
     "    precision.append(precision_score(y_actual,y_predicted))\n",
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
        "       1, 1])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -425,17 +425,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5605335157318742 Median : 0.5735294117647058 Min : 0.39705882352941174 Max : 0.6764705882352942\n",
-      "precision - Mean: 0.14853122423967235 Median : 0.0 Min : 0.0 Max : 0.8\n",
-      "recall -    Mean: 0.1098636728147554 Median : 0.0 Min : 0.0 Max : 0.9655172413793104\n",
-      "f1 -        Mean: 0.10119679893205441 Median : 0.0 Min : 0.0 Max : 0.5833333333333333\n"
+      "Accuracy -  Mean: 0.600547195622435 Median : 0.5882352941176471 Min : 0.4264705882352941 Max : 0.75\n",
+      "precision - Mean: 0.41123247828642523 Median : 0.5333333333333333 Min : 0.0 Max : 0.8\n",
+      "recall -    Mean: 0.3344025661587811 Median : 0.3448275862068966 Min : 0.0 Max : 1.0\n",
+      "f1 -        Mean: 0.3545514469734856 Median : 0.4444444444444445 Min : 0.0 Max : 0.6885245901639345\n"
      ]
     }
    ],
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,10 +469,10 @@
     "    train_normal = X_normal.loc[:,sens].values\n",
     "    train_attack = X_attack.loc[:,sens].values\n",
     "    model = Pipeline()\n",
-    "    model.fit(train_normal,train_attack,lag,stride,kscore_init='inertia',corr_normal=corr_normal[:,i].reshape(len(X_normal.columns),nolag_normal),\n",
-    "              corr_attack=corr_attack[:,i].reshape(len(X_attack.columns),nolag_attack),only_corr=True)\n",
+    "    model.fit(train_normal,train_attack,lag,stride,kscore_init='inertia',corr_normal=corr_normal[:,i].reshape(nolag_normal,len(X_normal.columns)).T,\n",
+    "              corr_attack=corr_attack[:,i].reshape(nolag_attack,len(X_attack.columns)).T,only_corr=True)\n",
     "    test = X_test.loc[:,sens].values\n",
-    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(len(X_normal.columns),nolag_test),only_corr=True)\n",
+    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(nolag_test,len(X_normal.columns)).T,only_corr=True)\n",
     "    sensor_predicted.append(y_predicted)\n",
     "    accuracy.append(accuracy_score(y_actual,y_predicted))\n",
     "    precision.append(precision_score(y_actual,y_predicted))\n",
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
        "       1, 1])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -531,17 +531,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5369357045143639 Median : 0.5588235294117647 Min : 0.4117647058823529 Max : 0.6029411764705882\n",
-      "precision - Mean: 0.28292156197799584 Median : 0.3333333333333333 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.17000801924619088 Median : 0.10344827586206896 Min : 0.0 Max : 0.9655172413793104\n",
-      "f1 -        Mean: 0.17364009680361134 Median : 0.16216216216216217 Min : 0.0 Max : 0.5833333333333333\n"
+      "Accuracy -  Mean: 0.5882352941176471 Median : 0.5735294117647058 Min : 0.4264705882352941 Max : 0.7352941176470589\n",
+      "precision - Mean: 0.365948414179765 Median : 0.4444444444444444 Min : 0.0 Max : 0.7391304347826086\n",
+      "recall -    Mean: 0.3087409783480353 Median : 0.3448275862068966 Min : 0.0 Max : 1.0\n",
+      "f1 -        Mean: 0.3231986977184837 Median : 0.39285714285714285 Min : 0.0 Max : 0.7096774193548386\n"
      ]
     }
    ],
