--- a/ctown3.ipynb
+++ b/ctown3.ipynb
@@ -141,10 +141,10 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1,\n",
-       "       1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+       "array([0, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1,\n",
+       "       1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,\n",
+       "       1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1])"
       ]
      },
      "execution_count": 10,
@@ -167,10 +167,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.8117647058823529\n",
-      "Precision  0.8\n",
-      "Recall  0.8695652173913043\n",
-      "F1-score  0.8333333333333333\n"
+      "Accuracy  0.788235294117647\n",
+      "Precision  0.7592592592592593\n",
+      "Recall  0.8913043478260869\n",
+      "F1-score  0.8200000000000001\n"
      ]
     }
    ],
@@ -190,10 +190,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5031463748290015 Median : 0.5058823529411764 Min : 0.43529411764705883 Max : 0.611764705882353\n",
-      "precision - Mean: 0.6856589147286822 Median : 1.0 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.08998988877654197 Median : 0.08695652173913043 Min : 0.0 Max : 0.30434782608695654\n",
-      "f1 -        Mean: 0.15438785782240957 Median : 0.16 Min : 0.0 Max : 0.45901639344262296\n"
+      "Accuracy -  Mean: 0.49958960328317376 Median : 0.49411764705882355 Min : 0.4588235294117647 Max : 0.6\n",
+      "precision - Mean: 0.6701592980662747 Median : 0.875 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.08594539939332659 Median : 0.06521739130434782 Min : 0.0 Max : 0.32608695652173914\n",
+      "f1 -        Mean: 0.1457692603201236 Median : 0.12244897959183672 Min : 0.0 Max : 0.4516129032258065\n"
      ]
     }
    ],
@@ -247,9 +247,9 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1,\n",
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
@@ -274,9 +274,9 @@
      "output_type": "stream",
      "text": [
       "Accuracy  0.5529411764705883\n",
-      "Precision  0.5487804878048781\n",
-      "Recall  0.9782608695652174\n",
-      "F1-score  0.7031250000000001\n"
+      "Precision  0.5476190476190477\n",
+      "Recall  1.0\n",
+      "F1-score  0.7076923076923077\n"
      ]
     }
    ],
@@ -296,10 +296,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5242134062927498 Median : 0.5058823529411764 Min : 0.43529411764705883 Max : 0.6235294117647059\n",
-      "precision - Mean: 0.5676326642420784 Median : 0.6923076923076923 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.18503538928210314 Median : 0.1956521739130435 Min : 0.0 Max : 0.43478260869565216\n",
-      "f1 -        Mean: 0.2681591665565531 Median : 0.3050847457627119 Min : 0.0 Max : 0.5555555555555555\n"
+      "Accuracy -  Mean: 0.5176470588235295 Median : 0.5058823529411764 Min : 0.4588235294117647 Max : 0.6352941176470588\n",
+      "precision - Mean: 0.5622794577151341 Median : 0.6666666666666666 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.1698685540950455 Median : 0.13043478260869565 Min : 0.0 Max : 0.4782608695652174\n",
+      "f1 -        Mean: 0.2481682356690804 Median : 0.22641509433962262 Min : 0.0 Max : 0.5789473684210527\n"
      ]
     }
    ],
@@ -373,9 +373,9 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1,\n",
        "       1, 1])"
       ]
      },
@@ -399,10 +399,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.4264705882352941\n",
-      "Precision  0.4264705882352941\n",
-      "Recall  1.0\n",
-      "F1-score  0.5979381443298969\n"
+      "Accuracy  0.4411764705882353\n",
+      "Precision  0.4307692307692308\n",
+      "Recall  0.9655172413793104\n",
+      "F1-score  0.5957446808510639\n"
      ]
     }
    ],
@@ -422,10 +422,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5807113543091655 Median : 0.5735294117647058 Min : 0.45588235294117646 Max : 0.7058823529411765\n",
-      "precision - Mean: 0.4184855154395093 Median : 0.5 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.1475541299117883 Median : 0.13793103448275862 Min : 0.0 Max : 0.41379310344827586\n",
-      "f1 -        Mean: 0.2045931321276584 Median : 0.21052631578947367 Min : 0.0 Max : 0.5238095238095238\n"
+      "Accuracy -  Mean: 0.5841313269493843 Median : 0.5735294117647058 Min : 0.5147058823529411 Max : 0.6911764705882353\n",
+      "precision - Mean: 0.37905982905982905 Median : 0.4444444444444444 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.12991178829190056 Median : 0.10344827586206896 Min : 0.0 Max : 0.4827586206896552\n",
+      "f1 -        Mean: 0.18451222687777158 Median : 0.16216216216216217 Min : 0.0 Max : 0.5714285714285714\n"
      ]
     }
    ],
@@ -479,9 +479,9 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1])"
       ]
      },
@@ -505,10 +505,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.47058823529411764\n",
-      "Precision  0.4444444444444444\n",
-      "Recall  0.9655172413793104\n",
-      "F1-score  0.6086956521739131\n"
+      "Accuracy  0.4852941176470588\n",
+      "Precision  0.453125\n",
+      "Recall  1.0\n",
+      "F1-score  0.6236559139784946\n"
      ]
     }
    ],
@@ -528,10 +528,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5790013679890561 Median : 0.5735294117647058 Min : 0.4852941176470588 Max : 0.6617647058823529\n",
-      "precision - Mean: 0.3919472909950986 Median : 0.42105263157894735 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.1315156375300722 Median : 0.13793103448275862 Min : 0.0 Max : 0.3448275862068966\n",
-      "f1 -        Mean: 0.18737239644695033 Median : 0.1875 Min : 0.0 Max : 0.46511627906976755\n"
+      "Accuracy -  Mean: 0.5725034199726403 Median : 0.5735294117647058 Min : 0.45588235294117646 Max : 0.6617647058823529\n",
+      "precision - Mean: 0.3278584017481706 Median : 0.38461538461538464 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.12750601443464313 Median : 0.10344827586206896 Min : 0.0 Max : 0.41379310344827586\n",
+      "f1 -        Mean: 0.17562608724937176 Median : 0.16666666666666663 Min : 0.0 Max : 0.5\n"
      ]
     }
    ],
@@ -550,8 +550,8 @@
     {
      "data": {
       "text/plain": [
-       "array([1.00220809, 1.00265415, 1.00064584, 1.0034128 , 1.00119146,\n",
-       "       1.00000103, 1.00444349, 1.00542875])"
+       "array([1.00115335, 1.00043341, 1.00177992, 1.00000172, 1.00354943,\n",
+       "       0.99999847, 1.00138197, 1.00012591])"
       ]
      },
      "execution_count": 27,
